Updating content for top panel in resume

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello 1234
+<html>
+<head>
+	<title> My First page</title>
+	<link type="text/css" rel= "stylesheet" href="format.css"></link>
+</head>
+<body>
+	<div >
+		<img src="img1.jpg" class="img-round">	
+		<div class = "mid-block">
+			<p style="font-size : 30px"> Suhani Khurana </p>
+			<p style="font-style: italic"> Graduate Analyst </p>
+		</div>
+		<div class = "right-block">
+			<p>p: 9999595628 </p>
+			<p>e: suhani24khurana@gmail.com</p>
+		</div>
+		
+	</div>
+	
+
+</body>
+</html>
