added image, properly aligned top panel

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 </head>
 <body>
 	<div >
-		<img src="img1.jpg" class="img-round">	
-		<div class = "mid-block">
+		<div class='img-block inline-block'>
+			<img src="img1.jpg" class="img-round">	
+		</div>
+		<div class = "mid-block inline-block">
 			<p style="font-size : 30px"> Suhani Khurana </p>
 			<p style="font-style: italic"> Graduate Analyst </p>
 		</div>
-		<div class = "right-block">
+		<div class = "right-block inline-block">
 			<p>p: 9999595628 </p>
 			<p>e: suhani24khurana@gmail.com</p>
 		</div>
 		
 	</div>
-	
+	<hr>
 
 </body>
 </html>
