adding left & right panels in the main body

--- a/index.html
+++ b/index.html
@@ -19,6 +19,51 @@
 		
 	</div>
 	<hr>
-
+	<div>
+		<div class="inline-block left-panel"> 
+			<p> Work Experience</p>
+		</div>
+		<div class="inline-block right-panel">
+		<div>
+			<p class= "heading-size"> Royal Bank of Scotland</p>
+			<p class= "content-size"> Working as a Graduate Analyst</p>
+		</div>
+		<div >
+			<p class= "heading-size"> Deloitte</p>
+			<p class= "content-size"> Worked as a Business Technology Analyst</p>
+		</div>
+		<div >
+			<p class= "heading-size"> Xplanck</p>
+			<p class= "content-size"> Worked as a Developer (Winter Intern)</p>
+		</div>
+		</div>
+	</div>
+	<hr>
+	<div>
+		<div class="inline-block left-panel"> 
+			<p> Key Skills</p>
+		</div>
+		<div class="inline-block right-panel">
+		<div>
+			<ul>
+				<li> C,C++</li>
+				<li> Java</li>
+				<li> C#, .net </li>
+			</ul>
+		</div>
+	</div>
+	<hr>
+	<div>
+		<div class="inline-block left-panel"> 
+			<p> Education </p>
+		</div>
+		<div class="inline-block right-panel">
+		<div>
+			<p class= "heading-size"> Delhi Technological University</p>
+			<p class= "content-size"> B.Tech Software Engineering</p>
+		</div>
+		</div>
+	</div>
+	
 </body>
 </html>
