--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <head>
 	<title> My First page</title>
 	<link type="text/css" rel= "stylesheet" href="format.css"></link>
+	<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'></link>
+	<link href='https://fonts.googleapis.com/css?family=Michroma' rel='stylesheet'></link>
 </head>
 <body>
-	<div >
+	<div style = "font-family : 'Michroma' ">
 		<div class='img-block inline-block'>
 			<img src="img1.jpg" class="img-round">	
 		</div>
-		<div class = "mid-block inline-block">
-			<p style="font-size : 30px"> Suhani Khurana </p>
-			<p style="font-style: italic"> Graduate Analyst </p>
+		<div class = "mid-block inline-block" >
+			<p style="font-size : 20px"> Suhani Khurana </p>
+			<p style="font-style: italic ;font-size : 15px"> Graduate Analyst </p>
 		</div>
-		<div class = "right-block inline-block">
+		<div class = "right-block inline-block" style = "font-size : 12px">
 			<p>p: 9999595628 </p>
 			<p>e: suhani24khurana@gmail.com</p>
 		</div>
@@ -20,7 +22,7 @@
 	</div>
 	<hr>
 	<div>
-		<div class="inline-block left-panel"> 
+		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
 			<p> Work Experience</p>
 		</div>
 		<div class="inline-block right-panel">
@@ -40,7 +42,7 @@
 	</div>
 	<hr>
 	<div>
-		<div class="inline-block left-panel"> 
+		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
 			<p> Key Skills</p>
 		</div>
 		<div class="inline-block right-panel">
@@ -54,7 +56,7 @@
 	</div>
 	<hr>
 	<div>
-		<div class="inline-block left-panel"> 
+		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
 			<p> Education </p>
 		</div>
 		<div class="inline-block right-panel">
