--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class = "mid-block inline-block" >
 			<p style="font-size : 20px"> Suhani Khurana </p>
-			<p style="font-style: italic ;font-size : 15px"> Graduate Analyst </p>
+			<p style="font-size : 15px"> Graduate Analyst </p>
 		</div>
 		<div class = "right-block inline-block" style = "font-size : 12px">
 			<p>p: 9999595628 </p>
