converting to lorem ipsum

--- a/index.html
+++ b/index.html
@@ -11,58 +11,64 @@
 			<img src="img1.jpg" class="img-round">	
 		</div>
 		<div class = "mid-block inline-block" >
-			<p style="font-size : 20px"> Suhani Khurana </p>
-			<p style="font-size : 15px"> Graduate Analyst </p>
+			<p style="font-size : 20px"> Lorem ipsum dolor sit amet </p>
+			<p style="font-size : 15px"> Lorem ipsum </p>
 		</div>
 		<div class = "right-block inline-block" style = "font-size : 12px">
-			<p>p: 9999595628 </p>
-			<p>e: suhani24khurana@gmail.com</p>
+			<p>p: Lorem ipsum </p>
+			<p>e: Lorem ipsum</p>
 		</div>
 		
 	</div>
 	<hr>
 	<div>
 		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
-			<p> Work Experience</p>
+			<p> Lorem ipsum</p>
 		</div>
 		<div class="inline-block right-panel">
 		<div>
-			<p class= "heading-size"> Royal Bank of Scotland</p>
-			<p class= "content-size"> Working as a Graduate Analyst</p>
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat. </p>
 		</div>
 		<div >
-			<p class= "heading-size"> Deloitte</p>
-			<p class= "content-size"> Worked as a Business Technology Analyst</p>
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
 		</div>
 		<div >
-			<p class= "heading-size"> Xplanck</p>
-			<p class= "content-size"> Worked as a Developer (Winter Intern)</p>
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
 		</div>
 		</div>
 	</div>
 	<hr>
 	<div>
 		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
-			<p> Key Skills</p>
+			<p> Lorem ipsum</p>
 		</div>
 		<div class="inline-block right-panel">
 		<div>
 			<ul>
-				<li> C,C++</li>
-				<li> Java</li>
-				<li> C#, .net </li>
+				<li> Lorem ipsum</li>
+				<li> Lorem ipsum</li>
+				<li> Lorem ipsum </li>
 			</ul>
 		</div>
 	</div>
 	<hr>
 	<div>
 		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
-			<p> Education </p>
+			<p> Lorem ipsum </p>
 		</div>
 		<div class="inline-block right-panel">
 		<div>
-			<p class= "heading-size"> Delhi Technological University</p>
-			<p class= "content-size"> B.Tech Software Engineering</p>
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum</p>
 		</div>
 		</div>
 	</div>
