--- a/index.html
+++ b/index.html
@@ -1,77 +1,115 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title> My First page</title>
-	<link type="text/css" rel= "stylesheet" href="format.css"></link>
-	<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'></link>
-	<link href='https://fonts.googleapis.com/css?family=Michroma' rel='stylesheet'></link>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<link rel="stylesheet" href="format.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div style = "font-family : 'Michroma' ">
-		<div class='img-block inline-block'>
-			<img src="img1.jpg" class="img-round">	
-		</div>
-		<div class = "mid-block inline-block" >
-			<p style="font-size : 20px"> Lorem ipsum dolor sit amet </p>
-			<p style="font-size : 15px"> Lorem ipsum </p>
-		</div>
-		<div class = "right-block inline-block" style = "font-size : 12px">
-			<p>p: Lorem ipsum </p>
-			<p>e: Lorem ipsum</p>
-		</div>
+	<div class= "container-fluid" >
 		
+
+	<div class= "row page-header" >
+		<div class= "col-sm-2">
+			<img src="img1.jpg" class="img-circle" width = "100%" height= "100%">	
+		</div>
+		<div class = "col-sm-7" >
+			<p style="font-size : 30px"> Lorem ipsum  </p>
+			<p style="font-size : 20px"> Lorem ipsum </p>
+		</div>
+		<div class = "col-sm-2" style = "font-size : 15px">
+			<p><span class="glyphicon glyphicon-earphone"></span> Lorem ipsum </p>
+	       <p><span class="glyphicon glyphicon-envelope"></span>  Lorem ipsum</p>
+		</div>
+	
 	</div>
-	<hr>
-	<div>
-		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
+	
+	<div class= "row">
+		<div class= "col-sm-4" style= "font-size : 25px"> 
 			<p> Lorem ipsum</p>
 		</div>
-		<div class="inline-block right-panel">
-		<div>
+		<div class = "col-sm-8">
+		<div class = "row">
+		<div class = "col-sm-8">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
 		</div>
-		<div >
+		<div class = "col-sm-8">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
-		<div >
+		<div class = "col-sm-8">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
 		</div>
+		</div>
 	</div>
 	<hr>
-	<div>
-		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
+	<div class= "row">
+		<div class= "col-sm-4" style= "font-size : 25px"> 
 			<p> Lorem ipsum</p>
 		</div>
-		<div class="inline-block right-panel">
-		<div>
-			<ul>
-				<li> Lorem ipsum</li>
-				<li> Lorem ipsum</li>
-				<li> Lorem ipsum </li>
-			</ul>
+		<div class = "col-sm-8">
+		<div class = "row">
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat. </p>
+		</div>
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
+		</div>
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
+		</div>
+		</div>
 		</div>
 	</div>
 	<hr>
-	<div>
-		<div class="inline-block left-panel" style= "font-family: 'Sofia';"> 
-			<p> Lorem ipsum </p>
+	<div class= "row">
+		<div class= "col-sm-4" style= "font-size : 25px"> 
+			<p> Lorem ipsum</p>
 		</div>
-		<div class="inline-block right-panel">
-		<div>
+		<div class = "col-sm-8">
+		<div class = "row">
+		<div class = "col-sm-8">
 			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat. </p>
+		</div>
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
+		</div>
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
+			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+			magna aliquam erat volutpat.</p>
+		</div>
 		</div>
 		</div>
 	</div>
-	
 </body>
 </html>
