--- a/index.html
+++ b/index.html
@@ -22,31 +22,31 @@
 			<p style="font-size : 20px"> Lorem ipsum </p>
 		</div>
 		<div class = "col-sm-2" style = "font-size : 15px">
-			<p><span class="glyphicon glyphicon-earphone"></span> Lorem ipsum </p>
-	       <p><span class="glyphicon glyphicon-envelope"></span>  Lorem ipsum</p>
+			<p><span class="glyphicon glyphicon-earphone"></span> Loremipsum </p>
+	       <p><span class="glyphicon glyphicon-envelope"></span>  Lorem@ipsum</p>
 		</div>
 	
 	</div>
 	
 	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px"> 
+		<div class= "col-sm-4" style= "font-size : 25px; background-color : pink"> 
 			<p> Lorem ipsum</p>
 		</div>
 		<div class = "col-sm-8">
 		<div class = "row">
-		<div class = "col-sm-8">
+		<div class = "col-sm-8" style= " background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
 		</div>
-		<div class = "col-sm-8">
+		<div class = "col-sm-8" style= " background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
-		<div class = "col-sm-8">
+		<div class = "col-sm-8" style= " background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
