Adding bootstrap collapse and modal

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 		</div>
 		<div class = "col-sm-8">
 		<div class = "row">
-		<div class = "col-sm-8" style= " background-color : lavender">
+		<div class = "col-sm-8" style= "background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
 		</div>
-		<div class = "col-sm-8" style= " background-color : lavender">
+		<div class = "col-sm-8" style= "background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
-		<div class = "col-sm-8" style= " background-color : lavender">
+		<div class = "col-sm-8" style= "background-color : lavender">
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -64,6 +64,27 @@
 		<div class = "row">
 		<div class = "col-sm-8">
 			<p class= "heading-size"> Lorem ipsum</p>
+			<div class= "content-size"> 
+			<ul class= "list-group">
+				<li class="list-group-item"> Lorem Ipsum</li>
+				<li class="list-group-item"> Lorem Ipsum</li>
+				<li class="list-group-item"> Lorem Ipsum</li>
+			</ul>
+			</div>
+		</div>
+		</div>
+		</div>
+	</div>
+	<hr>
+	<div class= "row">
+		<div class= "col-sm-4" style= "font-size : 25px"> 
+			<p> Lorem ipsum</p>
+		</div>
+		<div class = "col-sm-8">
+			<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Click Me!</button>
+		<div class = "row collapse" id="demo">
+		<div class = "col-sm-8">
+			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
@@ -89,27 +110,24 @@
 			<p> Lorem ipsum</p>
 		</div>
 		<div class = "col-sm-8">
-		<div class = "row">
-		<div class = "col-sm-8">
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat. </p>
-		</div>
-		<div class = "col-sm-8">
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
-		</div>
-		<div class = "col-sm-8">
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#demo-modal">Click Me to see Modal!</button>
+		<div class = "modal fade" id="demo-modal" role = "dialog">
+		<div class ="modal dialog">
+		<div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
 		</div>
 		</div>
-		</div>
+	</div>
 	</div>
 </body>
 </html>
