--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<link rel="stylesheet" href="format.css">
+  	<script type="text/javascript" src="data.js"></script>
+  	<script type="text/javascript" src="scripts/script.js"></script>
 </head>
 <body>
 	<div class= "container-fluid" >
@@ -18,35 +20,35 @@
 			<img src="img1.jpg" class="img-circle" width = "100%" height= "100%">	
 		</div>
 		<div class = "col-sm-7" >
-			<p style="font-size : 30px"> Lorem ipsum  </p>
-			<p style="font-size : 20px"> Lorem ipsum </p>
+			<p style="font-size : 30px" id="usrName">   </p>
+			<p style="font-size : 20px" id= "usrTitle">  </p>
 		</div>
 		<div class = "col-sm-2" style = "font-size : 15px">
-			<p><span class="glyphicon glyphicon-earphone"></span> Loremipsum </p>
-	       <p><span class="glyphicon glyphicon-envelope"></span>  Lorem@ipsum</p>
+			<p ><span class="glyphicon glyphicon-earphone"></span><p id="usrPhone"></p>  </p>
+	       <p ><span class="glyphicon glyphicon-envelope"></span> <p id="usrEmail"></p> </p>
 		</div>
 	
 	</div>
 	
 	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px; background-color : pink"> 
+		<div class= "col-sm-4" style= "font-size : 25px"> 
 			<p> Lorem ipsum</p>
 		</div>
 		<div class = "col-sm-8">
 		<div class = "row">
-		<div class = "col-sm-8" style= "background-color : lavender">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
 		</div>
-		<div class = "col-sm-8" style= "background-color : lavender">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
-		<div class = "col-sm-8" style= "background-color : lavender">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -81,21 +83,20 @@
 			<p> Lorem ipsum</p>
 		</div>
 		<div class = "col-sm-8">
-			<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Click Me!</button>
-		<div class = "row collapse" id="demo">
-		<div class = "col-sm-8">
+		<div class = "row">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat. </p>
 		</div>
-		<div class = "col-sm-8">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.</p>
 		</div>
-		<div class = "col-sm-8">
+		<div class = "col-sm-8" >
 			<p class= "heading-size"> Lorem ipsum</p>
 			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
@@ -105,30 +106,6 @@
 		</div>
 	</div>
 	<hr>
-	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px"> 
-			<p> Lorem ipsum</p>
-		</div>
-		<div class = "col-sm-8">
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#demo-modal">Click Me to see Modal!</button>
-	    </div>
-		<div class = "modal fade" id="demo-modal" role = "dialog">
-		<div class ="modal dialog">
-		<div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-		</div>
-		</div>
-	
-	</div>
+
 </body>
 </html>
