reading from json and removing all content from index.html

--- a/index.html
+++ b/index.html
@@ -24,88 +24,13 @@
 			<p style="font-size : 20px" id= "usrTitle">  </p>
 		</div>
 		<div class = "col-sm-2" style = "font-size : 15px">
-			<p ><span class="glyphicon glyphicon-earphone"></span><p id="usrPhone"></p>  </p>
-	       <p ><span class="glyphicon glyphicon-envelope"></span> <p id="usrEmail"></p> </p>
+			<div><span class="glyphicon glyphicon-earphone"></span><p id="usrPhone"></p>  </div>
+	        <div><span class="glyphicon glyphicon-envelope"></span> <p id="usrEmail"></p> </div>
 		</div>
 	
 	</div>
 	
-	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px"> 
-			<p> Lorem ipsum</p>
-		</div>
-		<div class = "col-sm-8">
-		<div class = "row">
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat. </p>
-		</div>
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
-		</div>
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
-		</div>
-		</div>
-		</div>
-	</div>
-	<hr>
-	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px"> 
-			<p> Lorem ipsum</p>
-		</div>
-		<div class = "col-sm-8">
-		<div class = "row">
-		<div class = "col-sm-8">
-			<p class= "heading-size"> Lorem ipsum</p>
-			<div class= "content-size"> 
-			<ul class= "list-group">
-				<li class="list-group-item"> Lorem Ipsum</li>
-				<li class="list-group-item"> Lorem Ipsum</li>
-				<li class="list-group-item"> Lorem Ipsum</li>
-			</ul>
-			</div>
-		</div>
-		</div>
-		</div>
-	</div>
-	<hr>
-	<div class= "row">
-		<div class= "col-sm-4" style= "font-size : 25px"> 
-			<p> Lorem ipsum</p>
-		</div>
-		<div class = "col-sm-8">
-		<div class = "row">
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat. </p>
-		</div>
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
-		</div>
-		<div class = "col-sm-8" >
-			<p class= "heading-size"> Lorem ipsum</p>
-			<p class= "content-size">  Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-			magna aliquam erat volutpat.</p>
-		</div>
-		</div>
-		</div>
-	</div>
-	<hr>
+	
 
 </body>
 </html>
